# task_manager

./: .env  README.md  fernet.key  hello.py  passphrase.txt  public_key.asc  pyproject.toml
abs/: __init__.py  abc_create_jwt_token.py  abc_create_token.py  abc_encrypter.py  abc_inserttoken.py  abc_task_storage.py  abc_token_storage.py  abc_token_verifier.py  abc_user_storage.py
app/: __main__.py
gpg_keys/: .#lk0x00006000010240c0.iMac.15436  pubring.gpg  pubring.gpg~  pubring.kbx  pubring.kbx~  random_seed  trustdb.gpg
gpg_keys/openpgp-revocs.d/: 7E6D66F12AC7F37CBC15C84E2CEC47090D6658E4.rev  9722DC7C338BDAC2CA7F82A241AF76A8C906A789.rev
gpg_keys/private-keys-v1.d/: 8D29C26D6B9C9B203193AE87A677DB4DA0B6ADEC.key  B293870F733FFC1747E90D8C968D440632EC8DBA.key  BB8CEEC91104B0F5168A9A0E6D5D0D58508CF492.key  DD8D0200EA32FB97B22D62418FE70D26419830FE.key
implementations/: create_token.py  encrypter.py  inserttoken.py  task_storage.py  task_storage_stubs.py  token_storage.py  token_verifier.py  user_storage.py
migrations/: 000001_init_schema.up.sql  20241126091318_create_users_table.down.sql  20241126091318_create_users_table.up.sql  20241126091319_create_tasks_table.up.sql
models/: __init__.py  task.py  user.py
routes/: __init__.py  auth_login.py  auth_refresh.py  auth_register.py  create_ride.py  create_task_route.py  create_user_and_tokens.py  delete_task.py  hello_world.py  refresh_token.py  task_routes.py  update_task.py
stubs/: create_token.py  encrypter_stub.py  user_storage_stub.py
tests/: setup_tests_folder.py  test_token_verifier.py
(+6 files in other folders)
